# exopack

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CLAUDE.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md
.github/workflows/: release.yml
docs/: ROUGH_DRAFT_EXOPACK.md  book.toml  compression_map.md  testing_architecture.md
docs/src/: SUMMARY.md  compression_map.md  introduction.md
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md  SUPPLY_CHAIN_AUDIT.md
release/: exopack-linux-x86_64  exopack-macos-aarch64
scripts/: build-targets.sh
src/: ats_fixtures.rs  baked_demo.rs  checkpoint.rs  compaction.rs  demo.rs  devtools.rs  dual_mode.rs  guard.rs  harvest.rs  interface.rs  lib.rs  mock.rs  perm_gate.rs  screenshot.rs  standards_check.rs  triple_sims.rs  video.rs
tests/: ats_fixtures.rs  baked_demo.rs  harvest.rs  portfolio_standards.rs  video_cfg.rs
