# Unlicense — public domain — cochranblock.org
# exopack — testing capabilities to augment original binary into test binary.
# Screenshot, video recording, interface creation, API mocking, TRIPLE SIMS.

[package]
name = "exopack"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Testing augmentation for Rust binaries: TRIPLE SIMS determinism, visual regression, screenshot capture, API mocking, demo record/replay"
license = "Unlicense"
repository = "https://github.com/cochranblock/exopack"
homepage = "https://cochranblock.org"
readme = "README.md"
keywords = ["testing", "ci-cd", "screenshot", "triple-sims", "visual-regression"]
categories = ["development-tools::testing"]

[[bin]]
name = "exopack"
path = "src/bin/exopack.rs"
# No required-features: the binary builds with no extras (you get
# --help / --version / govdocs / --sbom). Subcommands gate on their own
# features, so e.g. `exopack standards` needs `--features standards_check`.
# Users who want the full CLI can install with `--features cli`.

[[bin]]
name = "exopack-harvest"
path = "src/bin/harvest_cli.rs"
required-features = ["harvest"]

[[bin]]
name = "wasm-smoke"
path = "src/bin/wasm_smoke.rs"
required-features = ["devtools"]

[[bin]]
name = "pixel-forge-smoke"
path = "src/bin/pixel_forge_smoke.rs"
required-features = ["devtools"]

[features]
default = []
# screenshot: pure Rust HTML→SVG→PNG capture (no Chrome)
screenshot = ["scraper", "resvg", "usvg", "tiny-skia", "reqwest", "tokio", "base64", "ab_glyph", "fontdb", "image", "dirs"]
# mock: wiremock for on-demand API mocking
mock = ["wiremock", "serde_json"]
# interface: test server harness, HTTP client helpers
interface = ["tokio", "reqwest"]
# video: xcap screen capture + recording; demo: action script recording
video = ["xcap", "image", "serde", "serde_json", "dirs"]
demo = ["serde", "serde_json", "video"]
# baked_demo: full intended-usage demo, zero user input (interface + serde_json)
baked_demo = ["interface", "serde_json"]
# triple_sims: run test runner 3 times; all must pass
triple_sims = []
# devtools: headless browser console check via CDP (chromiumoxide)
devtools = ["chromiumoxide", "chromiumoxide/fetcher", "chromiumoxide/rustls", "chromiumoxide/zip8", "dirs", "futures", "tokio", "serde_json"]
# standards_check: Rust industry standards gate for the whole portfolio
standards_check = []
# ats_fixtures: self-contained HTML mocks for ATS vendors (Greenhouse,
# Lever, Workday, iCIMS, Ashby) — pure Rust, no extra deps. Used by
# atsisbroken / kova for end-to-end browser autofill tests.
ats_fixtures = []
# cli: umbrella for the `exopack` binary's full subcommand set
cli = ["triple_sims", "screenshot", "standards_check", "devtools", "ats_fixtures"]
# harvest: connect to running Chrome via CDP, automate Gemini sprite generation
harvest = ["tokio", "futures", "serde_json", "image", "base64", "dirs", "reqwest", "tokio-tungstenite"]

[dependencies]
scraper = { version = "0.19", optional = true }
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json", "cookies", "rustls-tls"], default-features = false, optional = true }
wiremock = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = { version = "0.21", optional = true }
ab_glyph = { version = "0.2", optional = true }
fontdb = { version = "0.23", optional = true }
image = { version = "0.25", optional = true }
dirs = { version = "5", optional = true }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
chromiumoxide = { version = "0.9", optional = true, default-features = false }
futures = { version = "0.3", optional = true }
xcap = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/exopack-harvest-{ target }{ archive-suffix }"
bin-dir = "exopack-harvest-{ target }{ binary-ext }"
pkg-fmt = "bin"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
